Fix spacing of icons :)

--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -74,6 +74,10 @@ h1.display-logo {
   user-select: none;
 }
 
+.icons {
+  margin-left: 0.5rem;
+}
+
 // Navbar ======================================================================
 
 .navbar {
